feat: add browser extension for automatic cookie extraction
AUTOMATIC COOKIE EXTRACTION FOR PROTECTED VIDEOS

This commit implements a comprehensive solution for downloading protected
university lectures and authenticated video content with minimal user friction.

## 🎯 Problem Solved

Users were unable to download protected videos (university lectures on Kaltura,
Panopto, etc.) because manual cookie extraction was too complex and user-unfriendly.

## 🚀 Solution: Multi-Method Approach

Implemented THREE methods for cookie authentication, from most to least user-friendly:

### 1. Browser Extension (Best UX) - NEW ✨
- **FrogBytes Cookie Helper** - Chrome extension for one-click cookie extraction
- Automatically detects when user is on FrogBytes
- Extracts cookies on-demand via postMessage API
- Converts cookies to Netscape format for yt-dlp
- Zero manual work required - just click and download

### 2. Auto-Extract with Browser (Improved)
- Uses yt-dlp's --cookies-from-browser flag
- Attempts to read cookies from installed browsers
- May fail on remote servers (fallback available)

### 3. Manual Cookie Paste (Enhanced)
- Allows users to paste cookies from DevTools
- Supports Netscape and header formats
- Clear instructions and improved UI

## 📦 New Files

### Browser Extension
- public/manifest.json - Extension manifest (Chrome v3)
- public/extension-content.js - Content script (detects FrogBytes)
- public/extension-background.js - Service worker (handles cookies)
- public/extension-popup.html - Extension popup UI
- public/extension-install.html - Installation guide page

## 🔧 Modified Files

### Frontend (components/FileUpload.tsx)
- Added extension detection on mount
- Implemented extractCookiesWithExtension() for postMessage communication
- Added handleAutoExtractCookies() for one-click workflow
- Updated UI to show prominent extension button when installed
- Show "Install Extension" button when not installed
- Fixed TypeScript strict mode issues

### Backend (app/ap

--- a/.gitignore
+++ b/.gitignore
@@ -172,3 +172,14 @@ migrations-temp/
 *.pid
 *.seed
 *.pid.lock
+
+# Dependency directories
+# Environment variables
+# Editor directories and files
+.idea
+.vscode
+# OS specific
+
+# Task files
+# tasks.json
+# tasks/ 
