--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "archiver": "^7.0.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "crypto-js": "^4.2.0",
     "date-fns": "^4.1.0",
     "dotenv": "^17.2.3",
     "form-data": "^4.0.4",
@@ -59,12 +60,16 @@
     "next": "^15.0.3",
     "node-latex": "^3.1.0",
     "pdfjs-dist": "^5.4.149",
+    "puppeteer": "^24.24.1",
+    "puppeteer-extra": "^3.3.6",
+    "puppeteer-extra-plugin-stealth": "^2.11.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hot-toast": "^2.6.0",
     "react-markdown": "^10.1.0",
     "react-pdf": "^10.1.0",
     "recharts": "^3.2.1",
+    "redis": "^5.8.3",
     "rehype-highlight": "^7.0.2",
     "remark-gfm": "^4.0.1",
     "tailwind-merge": "^3.3.1",
@@ -76,6 +81,7 @@
     "@playwright/test": "^1.55.1",
     "@testing-library/jest-dom": "^6.9.0",
     "@testing-library/react": "^16.3.0",
+    "@types/crypto-js": "^4.2.2",
     "@types/form-data": "^2.2.1",
     "@types/jest": "^29.5.13",
     "@types/node": "^22.7.9",
