--- a/package.json
+++ b/package.json
@@ -94,8 +94,10 @@
     "autoprefixer": "^10.4.21",
     "eslint": "^8.57.1",
     "eslint-config-next": "^15.0.3",
+    "husky": "^8.0.3",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
+    "lint-staged": "^14.0.1",
     "postcss": "^8.5.6",
     "supabase": "^2.48.3",
     "tailwindcss": "^3.4.14",
@@ -104,5 +106,11 @@
     "ts-prune": "^0.10.3",
     "typescript": "5.9.3",
     "vitest": "^3.2.4"
+  },
+  "lint-staged": {
+    "**/*.{ts,tsx,js,jsx,json,css,md}": [
+      "prettier --write",
+      "git add"
+    ]
   }
 }
