--- a/.github/workflows/vercel-deployment.yml
+++ b/.github/workflows/vercel-deployment.yml
@@ -104,17 +104,24 @@ jobs:
       - name: Comment Preview URL on Commit
         if: success()
         uses: actions/github-script@v7
+        continue-on-error: true
         with:
           script: |
-            const url = '${{ steps.deploy.outputs.url }}';
-            const branch = context.ref.replace('refs/heads/', '');
+            try {
+              const url = '${{ steps.deploy.outputs.url }}';
+              const branch = context.ref.replace('refs/heads/', '');
 
-            github.rest.repos.createCommitComment({
-              owner: context.repo.owner,
-              repo: context.repo.repo,
-              commit_sha: context.sha,
-              body: `## Preview Deployment Successful\n\n**URL:** ${url}\n\n**Branch:** \`${branch}\`\n**Commit:** \`${context.sha.substring(0, 7)}\`\n**Deployed at:** ${new Date().toUTCString()}\n\n[Open Preview](${ url})`
-            });
+              await github.rest.repos.createCommitComment({
+                owner: context.repo.owner,
+                repo: context.repo.repo,
+                commit_sha: context.sha,
+                body: `## Preview Deployment Successful\n\n**URL:** ${url}\n\n**Branch:** \`${branch}\`\n**Commit:** \`${context.sha.substring(0, 7)}\`\n**Deployed at:** ${new Date().toUTCString()}\n\n[Open Preview](${ url})`
+              });
+              console.log('Successfully commented on commit');
+            } catch (error) {
+              console.log('Failed to comment on commit (permission issue):', error.message);
+              console.log('Deployment was successful, but comment could not be posted due to insufficient permissions');
+            }
 
       - name: Deployment Status Summary
         if: success()
@@ -218,16 +225,23 @@ jobs:
       - name: Comment Production URL on Commit
         if: success()
         uses: actions/github-script@v7
+        continue-on-error: true
         with:
           script: |
-            const url = '${{ steps.deploy.outputs.url }}';
+            try {
+              const url = '${{ steps.deploy.outputs.url }}';
 
-            github.rest.repos.createCommitComment({
-              owner: context.repo.owner,
-              repo: context.repo.repo,
-              commit_sha: context.sha,
-              body: `## Production Deployment Successful\n\n**URL:** ${url}\n\n**Branch:** \`main\`\n**Commit:** \`${context.sha.substring(0, 7)}\`\n**Deployed at:** ${new Date().toUTCString()}\n\n[Open Production](${ url})`
-            });
+              await github.rest.repos.createCommitComment({
+                owner: context.repo.owner,
+                repo: context.repo.repo,
+                commit_sha: context.sha,
+                body: `## Production Deployment Successful\n\n**URL:** ${url}\n\n**Branch:** \`main\`\n**Commit:** \`${context.sha.substring(0, 7)}\`\n**Deployed at:** ${new Date().toUTCString()}\n\n[Open Production](${ url})`
+              });
+              console.log('Successfully commented on commit');
+            } catch (error) {
+              console.log('Failed to comment on commit (permission issue):', error.message);
+              console.log('Deployment was successful, but comment could not be posted due to insufficient permissions');
+            }
 
       - name: Deployment Status Summary
         if: success()
@@ -266,6 +280,7 @@ jobs:
           elif [ "${{ needs.deploy-preview.result }}" == "success" ] || [ "${{ needs.deploy-production.result }}" == "success" ]; then
             echo "STATUS: SUCCESS"
             echo "Deployment completed successfully!"
+            echo "Note: If you see permission errors for commit comments, the deployment still succeeded."
             echo "=================================================="
           else
             echo "STATUS: SKIPPED"
