updating github workflow

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,6 +7,8 @@ on:
       - develop
       - 'feature/**'
       - 'feature/*'
+      - 'claude/**'
+      - 'claude/*'
   pull_request:
     branches:
       - main
