--- a/.github/workflows/vercel-deployment.yml
+++ b/.github/workflows/vercel-deployment.yml
@@ -6,6 +6,8 @@ on:
       - main
       - 'feature/**'
       - 'feature/*'
+      - 'claude/**'
+      - 'claude/*'
   pull_request:
     branches:
       - main
