--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "puppeteer-extra-plugin-stealth": "^2.11.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "rimraf": "^3.0.2",
     "react-hot-toast": "^2.6.0",
     "react-markdown": "^10.1.0",
     "react-pdf": "^10.1.0",
